# paperclip

./: LICENSE  README.md  paperclip.py  pyproject.toml  schema.sql
state/: paperclip.db
