[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperclip-ops"
version = "0.1.0"
description = "SQLite-backed control plane for autonomous agent operations — issues, budgets, agents, goals, approvals, routines."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Edward Shamosh", email = "edwardzbrooklyn@gmail.com" }
]
requires-python = ">=3.10"
keywords = ["agents", "operations", "sqlite", "cli", "autonomous"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/zbrooklyn-claude-labs/paperclip"
Source = "https://github.com/zbrooklyn-claude-labs/paperclip"

[project.scripts]
paperclip = "paperclip:main"

[tool.setuptools]
py-modules = ["paperclip"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["schema.sql"]
